# docs/swagger.json
@@ -78,12 +78,6 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/main.Movie"
-                                            }
-                                        },
                                         "message": {
                                             "type": "string"
                                         },
@@ -188,12 +182,6 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/main.Movie"
-                                            }
-                                        },
                                         "message": {
                                             "type": "string"
                                         },
@@ -261,12 +249,6 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/main.Movie"
-                                            }
-                                        },
                                         "message": {
                                             "type": "string"
                                         },
@@ -288,12 +270,6 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/main.Movie"
-                                            }
-                                        },
                                         "message": {
                                             "type": "string"
                                         },
@@ -352,12 +328,6 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/main.Movie"
-                                            }
-                                        },
                                         "message": {
                                             "type": "string"
                                         },
